# cookiecutter-pypackage-kj

./: .gitignore  .todo  LICENSE  README.md  cookiecutter.json  pyproject.toml
docs/: prompts.rst
draft/: setup_project.py
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: dev.txt
{{ cookiecutter.project_slug }}/: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml  setup_project.bash  setup_project.py  setup_project.sh
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml  code-embedder.yaml  python-package.yml
{{ cookiecutter.project_slug }}/requirements/: dev.txt
{{ cookiecutter.project_slug }}/src/{{cookiecutter.project_slug}}/: __about__.py
{{ cookiecutter.project_slug }}/tests/: __init__.py
